--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="icon" href="icon.jpg">
 </head>
 <body>
-     <script src="script.js" defer></script>
-
+    <div id="heaer">
+    <h1>Welcome</h1>
+    <h2>second test</h2>
+    </div>
+     <script src="script.js"></script>
 </body>
 </html>
