attendancepage added, made some cosmetic changes.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="auth-header">
                 <div class="auth-icon">📚</div>
                 <h1 class="auth-title">Hellfire Scholar</h1>
-                <p class="auth-subtitle">Your Academic Companion</p>
+                <p class="auth-subtitle">Sickest Academic Aid</p>
             </div>
 
             <div class="auth-tabs">
