CSS changes and Course selection

--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
 
             <div id="registerFields" style="display: none;">
                 <input type="text" id="registerName" placeholder="Full Name" class="input-group">
+                <label class="input-label">Course</label>
+                <select id="registerCourse" class="input-group">
+                    <option value="">Select your course</option>
+                    <option value="Computer Science Engineering">Computer Science Engineering</option>
+                    <option value="Electronics and Communication Engineering">Electronics and Communication Engineering</option>
+                    <option value="Information Technology">Information Technology</option>
+                    <option value="Mechanical Engineering">Mechanical Engineering</option>
+                    <option value="Civil Engineering">Civil Engineering</option>
+                </select>
             </div>
 
             <input type="email" id="authEmail" placeholder="Email" class="input-group">
