--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
         <header>
             <div class="header-content">
                 <div class="header-logo">
-                    <span>📚</span>
                     <span>Hellfire Scholar</span>
                 </div>
                 <div class="header-user">
@@ -67,19 +66,19 @@
             <aside class="sidebar">
                 <nav>
                     <div class="nav-item active" onclick="switchTab('dashboard')">
-                        📊 <span>Dashboard</span>
+                         <span>Dashboard</span>
                     </div>
                     <div class="nav-item" onclick="switchTab('notes')">
-                        📄 <span>Notes & Resources</span>
+                         <span>Notes & Resources</span>
                     </div>
                     <div class="nav-item" onclick="switchTab('syllabus')">
-                        📚 <span>Syllabus</span>
+                         <span>Syllabus</span>
                     </div>
                     <div class="nav-item" onclick="switchTab('assignments')">
-                        ✅ <span>Assignments</span>
+                         <span>Assignments</span>
                     </div>
                     <div class="nav-item" onclick="switchTab('attendance')">
-                        👥 <span>Attendance</span>
+                         <span>Attendance</span>
                     </div>
                 </nav>
             </aside>
