change the logo of auth page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="authScreen" class="auth-screen">
         <div class="auth-card">
             <div class="auth-header">
-                <div class="auth-icon">📚</div>
+                <div class="auth-icon"><img src="H.png" class="H"></div>
                 <h1 class="auth-title">Hellfire Scholar</h1>
                 <p class="auth-subtitle">Sickest Academic Aid</p>
             </div>
