--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hellfire Scholar</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="icon.jpg">
+    <link rel="icon" href="iconTab.jpg">
 </head>
 <body>
     <!-- Authentication Screen -->
